Fix front page blog section spacing

--- a/app/assets/stylus/pages/front-page.styl
+++ b/app/assets/stylus/pages/front-page.styl
@@ -149,24 +149,13 @@
         &-description
             color $black
             font-weight bold
-            margin 0 0 55px
+            margin 0 0 30px
             text-align center
             text-transform uppercase
 
         &-list
             margin-bottom 35px
-            padding-bottom 30px
             position relative
-
-            &:after
-                background $dusky-blue
-                bottom 0
-                content ''
-                height 1px
-                left 50%
-                position absolute
-                transform translateX( -50% )
-                width 65px
 
             &:last-child
                 margin-bottom 0
@@ -185,7 +174,7 @@
                     display none
 
         &-actions
-            margin-top 40px
+            margin-top 25px
             text-align center
 
     &--testimonial
