--- a/app/assets/stylus/widgets/button.styl
+++ b/app/assets/stylus/widgets/button.styl
@@ -31,7 +31,6 @@ input[type='submit'].button
 
     &__transparent
         background transparent
-        border-color transparent
         color $black
 
     &__tiffany
